--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-	<title>jQuery and Ajax</title>
+	<title>Maven</title>
 	<meta name="author" content="Judith Crooy" />
-	<meta name="description" content="Explanation about jQuery and AJAX for the MS70-480 exam" />
-	<meta name="keywords"  content="jquery, 70-480, AJAX, webdesign" />
+	<meta name="description" content="Explanation about Maven" />
+	<meta name="keywords"  content="java, maven, webdevelopment" />
 	<meta name="Resource-type" content="Document" />
 
 
@@ -20,8 +20,8 @@
 		$(document).ready(function() {
 
 			$('#fullpage').fullpage({
-				sectionsColor: ['#CC8B86', '#B4656F', '#5AB1BB', '#DDD8C4', '#5AB1BB'],
-				 anchors: ['home', 'about-jQuery', 'ajax', 'hands-on', 'links'],
+				sectionsColor: ['#D6EDFF','#84DCC6', '#ACD7EC', '#D6A2AD', '#478978'],
+				 anchors: ['home', 'about-maven', 'how-maven-works', 'why-use-maven', 'links'],
 				menu: '#menu',
 				scrollingSpeed: 1000
 			});
@@ -43,9 +43,9 @@
 <!--Dit is het navigatiemenu links boven -->
 <ul id="menu">
 	<li data-menuanchor="home"><a href="#home">Home</a></li>
-	<li data-menuanchor="about-jQuery"><a href="#section1">About jQuery</a></li>
-	<li data-menuanchor="ajax"><a href="#section2">Ajax</a></li>
-	<li data-menuanchor="hands-on"><a href="#section3">Hands-On</a></li>
+	<li data-menuanchor="about-maven"><a href="#section1">About</a></li>
+	<li data-menuanchor="ajax"><a href="#section2">How it works</a></li>
+	<li data-menuanchor="hands-on"><a href="#section3">Why Maven</a></li>
 	<li data-menuanchor="links"><a href="#section4">Links</a></li>
 </ul>
 
@@ -53,63 +53,78 @@
 <div id="fullpage">
 
 	<div class="section active" id="home">
-		<h1>I &hearts; jQuery & AJAX</h1>
+		<h1>I &hearts; Maven</h1>
 		 <input type="hidden" name="id" value="1" />
-		<p>It's magic</p>
-		<img id="unicorn" src="imgs/fat_unicorn.jpg" alt="Fat unicorn" />
+		<p>Build stuff</p>
+		<img id="unicorn" src="imgs/buildtoolmeme.jpg" alt="Build tool meme" />
 	</div>
 
 	<!-- Hier begint de eerste sectie, met sliders -->
 	<div class="section" id="section1">
 		<div class="slide active">
 			<div class="intro">
-				<h1>JQuery. A Javascript library</h1>
-				<p>Easy to use. Less code. Quick start. Lot of plug-ins</p>
-				<p>Great for DOM manipulation, event handling, AJAX & animation.</p>
+				<h1>Maven. A build tool for Java</h1>
+				<p>Maven helps you build your applications.</p>
+				<p>Great for packaging your project into a usable form.</p>
+				<p>Keeps you out of dependency hell &#x1f525;</p>
 				<p>Presentation content:</p>
-				<div class="button">Quick overview</div><br>
-				<div class="button">DOM manipulation</a></div><br>
-				<div class="button">Event handling</div><br>
-				<div class="button">Plug-ins</div><br>
-				<div class="button">AJAX &#9660;</div>
+				<div class="button">What is Maven</div><br>
+				<div class="button">How does it work</a></div><br>
+				<div class="button">Why use Maven</div><br>
+				<div class="button">Useful links & documentation</div><br>
+				
 			</div>
 		</div>
 
 		<div class="slide" id="wordcloud">
 			<div class="intro">
 				<!-- This is the wordcloud-->
-				<img src="imgs/wordcloud.png" class="cartoon" alt="jQuery wordcloud"/>
+				<img src="imgs/mavencloud.png" class="cartoon" alt="Maven wordcloud"/>
 				<!-- <a href="http://tagul.com/">Created with Tagul.com</a> --> 
 			</div>
 		</div>
 
 		<div class="slide">
 			<div class="intro">
-				<h1>Get started</h1>
-				<p>You start by including the jQuery library into your project.</p>
-				<p>Either <a href="https://jquery.com/download/" target="_blank"> download</a> it and include it or use CDN.</p>
-				<img src="imgs/includejquery.png" class="codesnippet" alt="Include jQuery"/>
-				<h3>Example of including jQuery. Do not copy! Google for the specifics.</h3> 
-				<br>
-
-				<p> In your js file you now create a jQuery object using following code:</p>
-				<p> Do not be scared by the $, it just is an alias for jQuery.</p>
-				<img src="imgs/documentready.png" class="codesnippet" alt="Creating a jQuery object"/>
+				<h1>What is a build tool</h1>
+				<p>A build tool basically makes sure that your project ends up as an executable file (.jar / .war).</p>
+				<p>It helps you automate repetitive tasks such as:</p>
+				<ul>
+					<li>&hearts; compile source code into binary</li>
+					<li>&hearts; package the binary code into executable files</li>
+					<li>&hearts; running tests</li>
+					<li>&hearts; download and manage dependencies</li>
+					<li>&hearts; deploy your project onto production system</li>
+				</ul>
 			</div>
 		</div>
 
 		<div class="slide">
 			<div class="intro">
-				<h1>DOM Manipulation</h1>
-				<p>jQuery provides an easy way to select elements from the DOM using selectors.</p> 
-				<p>You can do so by using HTML elements, classes or id's that you used.</p>
-				<p>You can also refer to the current element by using the word this.</p>
-				<img src="imgs/selectors.png" class="codesnippet" alt="jQuery selectors"/>
-				<p>Once you selected and element from the DOM, the fun begins.</p>
-				<p>Insert elements, remove them, add classes to them, the list is endless!</p>
-				<p>Go to their <a href="http://api.jquery.com/" target="_blank"> API documentation  </a>to find out about all the options.</p>
-				<img src="imgs/functionexample.png" class="codesnippet" alt="Example of function"/>
-				<h3>Very easy to read!</h3>
+				<h1>Wait. Dependencies?</h1>
+				<p>Dependencies are the libraries, plugins, tools, frameworks that your web app is using (depending on).</p>
+				<p>These dependencies have dependencies of their own.</p>
+				<p>Sometimes they will depend on different and incompatible versions of the same library.</p>
+				<p>Fixing one dependency will then break another.</p>
+				<p>This is professionally referred to as</p> 
+				<h2>Dependency Hell</h2>
+				<p>You do not want to go there.</p> 
+				
+			</div>
+		</div>
+
+		<div class="slide">
+			<div class="intro">
+				<h1>Maven is not alone</h1>
+				<p>There are more build tools specifically for Java.</p>
+				<h2>Ant (Another Neat Tool) - 2000</h2>
+				<p>Write your build scripts with XML</p>
+				<h2>Maven - 2004</h2>
+				<p>Write your build scripts with XML</p>
+				<p>Download and manage dependencies</p>
+				<h2>Gradle - 2012</h2>
+				<p>Write your build scripts with Groovy</p>
+				<p>Less code than XML</p>
 			</div>
 		</div>
 
