fixed wordcloud and added surge domain in cname

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 		<div class="slide" id="wordcloud">
 			<div class="intro">
 				<!-- This is the wordcloud-->
-				<img src="imgs/mavencloud.png" class="cartoon" alt="Maven wordcloud"/>
+				<img src="imgs/Mavencloud.png" class="cartoon" alt="Maven wordcloud"/>
 				<!-- <a href="http://tagul.com/">Created with Tagul.com</a> --> 
 			</div>
 		</div>
